tests/specs/graph/fast_check/test_test_test.txt
~~ {"workspaceFastCheck":true} ~~
# workspace_members
[
  {
    "base": "file:///",
    "nv": "@scope/a@1.0.0",
    "exports": {
      ".": "./mod.ts"
    }
  }
]

# mod.ts
export function a() {
  var x = "";
  return {} as typeof x;
};

export function a(b: string): typeof b {
};

# output
{
  "roots": [
    "file:///mod.ts"
  ],
  "modules": [
    {
      "kind": "esm",
      "size": 65,
      "mediaType": "TypeScript",
      "specifier": "file:///mod.ts"
    }
  ],
  "redirects": {}
}

Fast check file:///mod.ts:
  error[unknown-return-type]: unknown return type for function in the public API
   --> /mod.ts:1:17
    |
  1 | export function a () {
    |                 - this function's return type could not be inferred
    |
  3 |   return {} as typeof x;
    |   ------ because the value returned here
    |                       - contains this reference to a local variable or type
    |
    = hint: add an explicit return type to the function

    info: all functions in the public API must have an known return type
    info: local variables or types can not be referenced because they are not visible at the top level of the module
    docs: https://jsr.io/go/slow-type-unknown-return-type

